--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,6 @@
      "output_type": "stream",
      "text": [
       "All dependencies are up to date\n",
-      "All dependencies are up to date\n",
       "Resolving Hex dependencies...\n",
       "Dependency resolution completed:\n",
       "Unchanged:\n",
@@ -21,21 +20,34 @@
       "All dependencies are up to date\n",
       "==> ex_polars\n",
       "Compiling NIF crate :expolars (native/expolars)...\n",
-      "    Finished release [optimized] target(s) in 0.33s\n",
+      "    Finished release [optimized] target(s) in 0.25s\n",
       "Resolving Hex dependencies...\n",
       "Dependency resolution completed:\n",
       "Unchanged:\n",
-      "  deneb 0.1.0\n",
       "  elixir_uuid 1.2.1\n",
       "  ex_polars 0.2.1-dev\n",
       "  jason 1.2.2\n",
       "  rustler 0.22.0-rc.0\n",
       "  toml 0.5.2\n",
       "  typed_struct 0.2.1\n",
-      "All dependencies are up to date\n",
+      "Upgraded:\n",
+      "\u001b[32m  deneb 0.1.0 => 0.1.1\u001b[31m\u001b[0m\n",
+      "* Updating deneb (Hex package)\n",
+      "==> deneb\n",
+      "Compiling 8 files (.ex)\n",
+      "Generated deneb app\n",
       "==> ex_polars\n",
       "Compiling NIF crate :expolars (native/expolars)...\n",
-      "    Finished release [optimized] target(s) in 0.12s\n"
+      "    Finished release [optimized] target(s) in 0.20s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mwarning: \u001b[0mredefining module CustomEnvironment (current version defined in memory)\n",
+      "  mix.exs:1\n",
+      "\n"
      ]
     },
     {
@@ -44,7 +56,7 @@
        ":ok"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,12 +65,12 @@
     "Boyle.mk(\"polars\")\n",
     "Boyle.activate(\"polars\")\n",
     "Boyle.install({:ex_polars, \"~> 0.2.1-dev\"})\n",
-    "Boyle.install({:deneb, \"~> 0.1\"})"
+    "Boyle.install({:deneb, \"~> 0.1.1\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +79,7 @@
        "[Deneb.Chart, Deneb.Encoding, Deneb.Mark, Deneb.Projection, Deneb.Transform, Deneb.Viewer]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +126,7 @@
        "╰────────────┴───────┴───────┴───────┴───────┴────────┴──────────╯"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div id=\"deneb-chart-6a64695cfd7f4bfaad61e0d7940bd119\"></div>\n",
+       "<div id=\"deneb-chart-6c016f6b90104db89f995b9595f9998f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "(function(spec, embedOpt) {\n",
-       "  const outputDiv = document.getElementById(\"deneb-chart-6a64695cfd7f4bfaad61e0d7940bd119\");\n",
+       "  const outputDiv = document.getElementById(\"deneb-chart-6c016f6b90104db89f995b9595f9998f\");\n",
        "  const urls = {\n",
        "    \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5.18.0\",\n",
        "    \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@4.17.0\",\n",
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +249,7 @@
        "╰────────┴──────────────────┴──────┴─────────────────╯"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div id=\"deneb-chart-85b5df33ab4d42c29d19c88295084432\"></div>\n",
+       "<div id=\"deneb-chart-1a3768fe66a94c9287cbaca74936f3fe\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "(function(spec, embedOpt) {\n",
-       "  const outputDiv = document.getElementById(\"deneb-chart-85b5df33ab4d42c29d19c88295084432\");\n",
+       "  const outputDiv = document.getElementById(\"deneb-chart-1a3768fe66a94c9287cbaca74936f3fe\");\n",
        "  const urls = {\n",
        "    \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5.18.0\",\n",
        "    \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@4.17.0\",\n",
@@ -298,7 +310,7 @@
        "          .catch(showError)\n",
        "          .then(() => displayChart(vegaEmbed));\n",
        "  }\n",
-       "})({\"$schema\":\"https://vega.github.io/schema/vega-lite/v4.json\",\"data\":{\"format\":{\"type\":\"csv\"},\"values\":\"yield,variety,year,site\\n27,Manchuria,1931,University Farm\\n48.86667,Manchuria,1931,Waseca\\n27.43334,Manchuria,1931,Morris\\n39.93333,Manchuria,1931,Crookston\\n32.96667,Manchuria,1931,Grand Rapids\\n28.96667,Manchuria,1931,Duluth\\n43.06666,Glabron,1931,University Farm\\n55.2,Glabron,1931,Waseca\\n28.76667,Glabron,1931,Morris\\n38.13333,Glabron,1931,Crookston\\n29.13333,Glabron,1931,Grand Rapids\\n29.66667,Glabron,1931,Duluth\\n35.13333,Svansota,1931,University Farm\\n47.33333,Svansota,1931,Waseca\\n25.76667,Svansota,1931,Morris\\n40.46667,Svansota,1931,Crookston\\n29.66667,Svansota,1931,Grand Rapids\\n25.7,Svansota,1931,Duluth\\n39.9,Velvet,1931,University Farm\\n50.23333,Velvet,1931,Waseca\\n26.13333,Velvet,1931,Morris\\n41.33333,Velvet,1931,Crookston\\n23.03333,Velvet,1931,Grand Rapids\\n26.3,Velvet,1931,Duluth\\n36.56666,Trebi,1931,University Farm\\n63.8333,Trebi,1931,Waseca\\n43.76667,Trebi,1931,Morris\\n46.93333,Trebi,1931,Crookston\\n29.76667,Trebi,1931,Grand Rapids\\n33.93333,Trebi,1931,Duluth\\n43.26667,No. 457,1931,University Farm\\n58.1,No. 457,1931,Waseca\\n28.7,No. 457,1931,Morris\\n45.66667,No. 457,1931,Crookston\\n32.16667,No. 457,1931,Grand Rapids\\n33.6,No. 457,1931,Duluth\\n36.6,No. 462,1931,University Farm\\n65.7667,No. 462,1931,Waseca\\n30.36667,No. 462,1931,Morris\\n48.56666,No. 462,1931,Crookston\\n24.93334,No. 462,1931,Grand Rapids\\n28.1,No. 462,1931,Duluth\\n32.76667,Peatland,1931,University Farm\\n48.56666,Peatland,1931,Waseca\\n29.86667,Peatland,1931,Morris\\n41.6,Peatland,1931,Crookston\\n34.7,Peatland,1931,Grand Rapids\\n32,Peatland,1931,Duluth\\n24.66667,No. 475,1931,University Farm\\n46.76667,No. 475,1931,Waseca\\n22.6,No. 475,1931,Morris\\n44.1,No. 475,1931,Crookston\\n19.7,No. 475,1931,Grand Rapids\\n33.06666,No. 475,1931,Duluth\\n39.3,Wisconsin No. 38,1931,University Farm\\n58.8,Wisconsin No. 38,1931,Waseca\\n29.46667,Wisconsin No. 38,1931,Morris\\n49.86667,Wisconsin No. 38,1931,Crookston\\n34.46667,Wisconsin No. 38,1931,Grand Rapids\\n31.6,Wisconsin No. 38,1931,Duluth\\n26.9,Manchuria,1932,University Farm\\n33.46667,Manchuria,1932,Waseca\\n34.36666,Manchuria,1932,Morris\\n32.96667,Manchuria,1932,Crookston\\n22.13333,Manchuria,1932,Grand Rapids\\n22.56667,Manchuria,1932,Duluth\\n36.8,Glabron,1932,University Farm\\n37.73333,Glabron,1932,Waseca\\n35.13333,Glabron,1932,Morris\\n26.16667,Glabron,1932,Crookston\\n14.43333,Glabron,1932,Grand Rapids\\n25.86667,Glabron,1932,Duluth\\n27.43334,Svansota,1932,University Farm\\n38.5,Svansota,1932,Waseca\\n35.03333,Svansota,1932,Morris\\n20.63333,Svansota,1932,Crookston\\n16.63333,Svansota,1932,Grand Rapids\\n22.23333,Svansota,1932,Duluth\\n26.8,Velvet,1932,University Farm\\n37.4,Velvet,1932,Waseca\\n38.83333,Velvet,1932,Morris\\n32.06666,Velvet,1932,Crookston\\n32.23333,Velvet,1932,Grand Rapids\\n22.46667,Velvet,1932,Duluth\\n29.06667,Trebi,1932,University Farm\\n49.2333,Trebi,1932,Waseca\\n46.63333,Trebi,1932,Morris\\n41.83333,Trebi,1932,Crookston\\n20.63333,Trebi,1932,Grand Rapids\\n30.6,Trebi,1932,Duluth\\n26.43334,No. 457,1932,University Farm\\n42.2,No. 457,1932,Waseca\\n43.53334,No. 457,1932,Morris\\n34.33333,No. 457,1932,Crookston\\n19.46667,No. 457,1932,Grand Rapids\\n22.7,No. 457,1932,Duluth\\n25.56667,No. 462,1932,University Farm\\n44.7,No. 462,1932,Waseca\\n47,No. 462,1932,Morris\\n30.53333,No. 462,1932,Crookston\\n19.9,No. 462,1932,Grand Rapids\\n22.5,No. 462,1932,Duluth\\n28.06667,Peatland,1932,University Farm\\n36.03333,Peatland,1932,Waseca\\n43.2,Peatland,1932,Morris\\n25.23333,Peatland,1932,Crookston\\n26.76667,Peatland,1932,Grand Rapids\\n31.36667,Peatland,1932,Duluth\\n30,No. 475,1932,University Farm\\n41.26667,No. 475,1932,Waseca\\n44.23333,No. 475,1932,Morris\\n32.13333,No. 475,1932,Crookston\\n15.23333,No. 475,1932,Grand Rapids\\n27.36667,No. 475,1932,Duluth\\n38,Wisconsin No. 38,1932,University Farm\\n58.16667,Wisconsin No. 38,1932,Waseca\\n47.16667,Wisconsin No. 38,1932,Morris\\n35.9,Wisconsin No. 38,1932,Crookston\\n20.66667,Wisconsin No. 38,1932,Grand Rapids\\n29.33333,Wisconsin No. 38,1932,Duluth\\n\"},\"encoding\":{\"color\":{\"field\":\"site\"},\"x\":{\"aggregate\":\"sum\",\"field\":\"yield\"},\"y\":{\"field\":\"variety\"}},\"mark\":{\"type\":\"bar\"}}, {});\n",
+       "})({\"$schema\":\"https://vega.github.io/schema/vega-lite/v4.json\",\"data\":{\"format\":{\"type\":\"csv\"},\"values\":\"yield,variety,year,site\\n27,Manchuria,1931,University Farm\\n48.86667,Manchuria,1931,Waseca\\n27.43334,Manchuria,1931,Morris\\n39.93333,Manchuria,1931,Crookston\\n32.96667,Manchuria,1931,Grand Rapids\\n28.96667,Manchuria,1931,Duluth\\n43.06666,Glabron,1931,University Farm\\n55.2,Glabron,1931,Waseca\\n28.76667,Glabron,1931,Morris\\n38.13333,Glabron,1931,Crookston\\n29.13333,Glabron,1931,Grand Rapids\\n29.66667,Glabron,1931,Duluth\\n35.13333,Svansota,1931,University Farm\\n47.33333,Svansota,1931,Waseca\\n25.76667,Svansota,1931,Morris\\n40.46667,Svansota,1931,Crookston\\n29.66667,Svansota,1931,Grand Rapids\\n25.7,Svansota,1931,Duluth\\n39.9,Velvet,1931,University Farm\\n50.23333,Velvet,1931,Waseca\\n26.13333,Velvet,1931,Morris\\n41.33333,Velvet,1931,Crookston\\n23.03333,Velvet,1931,Grand Rapids\\n26.3,Velvet,1931,Duluth\\n36.56666,Trebi,1931,University Farm\\n63.8333,Trebi,1931,Waseca\\n43.76667,Trebi,1931,Morris\\n46.93333,Trebi,1931,Crookston\\n29.76667,Trebi,1931,Grand Rapids\\n33.93333,Trebi,1931,Duluth\\n43.26667,No. 457,1931,University Farm\\n58.1,No. 457,1931,Waseca\\n28.7,No. 457,1931,Morris\\n45.66667,No. 457,1931,Crookston\\n32.16667,No. 457,1931,Grand Rapids\\n33.6,No. 457,1931,Duluth\\n36.6,No. 462,1931,University Farm\\n65.7667,No. 462,1931,Waseca\\n30.36667,No. 462,1931,Morris\\n48.56666,No. 462,1931,Crookston\\n24.93334,No. 462,1931,Grand Rapids\\n28.1,No. 462,1931,Duluth\\n32.76667,Peatland,1931,University Farm\\n48.56666,Peatland,1931,Waseca\\n29.86667,Peatland,1931,Morris\\n41.6,Peatland,1931,Crookston\\n34.7,Peatland,1931,Grand Rapids\\n32,Peatland,1931,Duluth\\n24.66667,No. 475,1931,University Farm\\n46.76667,No. 475,1931,Waseca\\n22.6,No. 475,1931,Morris\\n44.1,No. 475,1931,Crookston\\n19.7,No. 475,1931,Grand Rapids\\n33.06666,No. 475,1931,Duluth\\n39.3,Wisconsin No. 38,1931,University Farm\\n58.8,Wisconsin No. 38,1931,Waseca\\n29.46667,Wisconsin No. 38,1931,Morris\\n49.86667,Wisconsin No. 38,1931,Crookston\\n34.46667,Wisconsin No. 38,1931,Grand Rapids\\n31.6,Wisconsin No. 38,1931,Duluth\\n26.9,Manchuria,1932,University Farm\\n33.46667,Manchuria,1932,Waseca\\n34.36666,Manchuria,1932,Morris\\n32.96667,Manchuria,1932,Crookston\\n22.13333,Manchuria,1932,Grand Rapids\\n22.56667,Manchuria,1932,Duluth\\n36.8,Glabron,1932,University Farm\\n37.73333,Glabron,1932,Waseca\\n35.13333,Glabron,1932,Morris\\n26.16667,Glabron,1932,Crookston\\n14.43333,Glabron,1932,Grand Rapids\\n25.86667,Glabron,1932,Duluth\\n27.43334,Svansota,1932,University Farm\\n38.5,Svansota,1932,Waseca\\n35.03333,Svansota,1932,Morris\\n20.63333,Svansota,1932,Crookston\\n16.63333,Svansota,1932,Grand Rapids\\n22.23333,Svansota,1932,Duluth\\n26.8,Velvet,1932,University Farm\\n37.4,Velvet,1932,Waseca\\n38.83333,Velvet,1932,Morris\\n32.06666,Velvet,1932,Crookston\\n32.23333,Velvet,1932,Grand Rapids\\n22.46667,Velvet,1932,Duluth\\n29.06667,Trebi,1932,University Farm\\n49.2333,Trebi,1932,Waseca\\n46.63333,Trebi,1932,Morris\\n41.83333,Trebi,1932,Crookston\\n20.63333,Trebi,1932,Grand Rapids\\n30.6,Trebi,1932,Duluth\\n26.43334,No. 457,1932,University Farm\\n42.2,No. 457,1932,Waseca\\n43.53334,No. 457,1932,Morris\\n34.33333,No. 457,1932,Crookston\\n19.46667,No. 457,1932,Grand Rapids\\n22.7,No. 457,1932,Duluth\\n25.56667,No. 462,1932,University Farm\\n44.7,No. 462,1932,Waseca\\n47,No. 462,1932,Morris\\n30.53333,No. 462,1932,Crookston\\n19.9,No. 462,1932,Grand Rapids\\n22.5,No. 462,1932,Duluth\\n28.06667,Peatland,1932,University Farm\\n36.03333,Peatland,1932,Waseca\\n43.2,Peatland,1932,Morris\\n25.23333,Peatland,1932,Crookston\\n26.76667,Peatland,1932,Grand Rapids\\n31.36667,Peatland,1932,Duluth\\n30,No. 475,1932,University Farm\\n41.26667,No. 475,1932,Waseca\\n44.23333,No. 475,1932,Morris\\n32.13333,No. 475,1932,Crookston\\n15.23333,No. 475,1932,Grand Rapids\\n27.36667,No. 475,1932,Duluth\\n38,Wisconsin No. 38,1932,University Farm\\n58.16667,Wisconsin No. 38,1932,Waseca\\n47.16667,Wisconsin No. 38,1932,Morris\\n35.9,Wisconsin No. 38,1932,Crookston\\n20.66667,Wisconsin No. 38,1932,Grand Rapids\\n29.33333,Wisconsin No. 38,1932,Duluth\\n\"},\"encoding\":{\"color\":{\"field\":\"site\"},\"x\":{\"aggregate\":\"sum\",\"field\":\"yield\"},\"y\":{\"field\":\"variety\"}},\"height\":600,\"mark\":{\"tooltip\":true,\"type\":\"bar\"},\"width\":800}, {});\n",
        "</script>\n"
       ]
      },
@@ -308,12 +320,12 @@
    ],
    "source": [
     "{:ok, data} = DF.to_csv(df)\n",
-    "c = Chart.new(Mark.new(:bar), Encoding.new(%{\n",
+    "c = Chart.new(Mark.new(:bar, true), Encoding.new(%{\n",
     "    x: %{aggregate: \"sum\", field: \"yield\"},\n",
     "    y: %{field: \"variety\"},\n",
     "    color: %{field: \"site\"}\n",
     "}))\n",
-    "spec = Deneb.to_json(data, Chart.to_json(c))\n",
+    "spec = Deneb.to_json(data, Chart.to_json(c, [width: 800, height: 600]))\n",
     "{:\"this is raw html\", Viewer.display(spec)}"
    ]
   },
